fix: configure sonar coverage and reduce findings
Configure CI-based SonarCloud analysis with project version metadata and coverage report paths, and fail visibly while Automatic Analysis is still enabled so scans do not silently omit those fields.

Refactor the current SonarCloud medium/high issue set across tools, UI, ACP parsing, and support services by extracting helpers, replacing generic exceptions, reducing duplicate literals, and cleaning small correctness warnings without changing tool behavior.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>